--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,11 @@
     <link rel="Stylesheet" href="/static/css/Style.css">
 </head>
 <body>
-<!--{% block body %}
-    {% endblock %}-->
-    {% block contenido %}
-    {% endblock %}
-</body>
+   
+{% block body %}
+{% endblock %}
+{% block contenido %}
+{% endblock %}
+{% block encabezado%}
+{% endblock %}
 </html>
