--- a/templates/encabezado.html
+++ b/templates/encabezado.html
@@ -1,13 +1,17 @@
 <link rel="Stylesheet" href="/static/css/Style.css">
 {% extends "base.html" %}
 
-{% include."html"%}
+{% block encabezado%}
 <div id="cuerpo">
 <header id="encabezado">
+    <button data-mod-target="#mod" id="usuario" class=""
     <h1>CLINICA COLOMBIA<H1>
 <header>
+    
 
-{% endinclude %}
+
+{% endblock %}
+
 
 
 
