--- a/templates/f_laboratorio.html
+++ b/templates/f_laboratorio.html
@@ -1,5 +1,10 @@
 <link rel="Stylesheet" href="/static/css/Style.css">
 <form action="/laboratorio", method="POST">
+    <div id="cuerpo">
+        <header id="encabezado">
+            <h1>CLINICA COLOMBIA<H1>
+        <header>
+        </div>
     <div id="laboratorio">
     <table>
         <h3 id="titulo">Laboratorio<h3>
