--- a/templates/f_medico.html
+++ b/templates/f_medico.html
@@ -1,4 +1,11 @@
-<link rel="Stylesheet" href="/static/css/Style.css">
+
+
+<link rel="Stylesheet" href="/static/css/Style.css"> 
+<div id="cuerpo">
+    <header id="encabezado">
+        <h1>CLINICA COLOMBIA<H1>
+    <header>
+    </div>
 
 <form action ="/ingrear_medico", method="POST">
     <div id="medico">
@@ -70,6 +77,7 @@
                     <input type="submit"  class="btn2" name="eliminar"value="eliminar">
                 </td>
             </tr>
+
     </table>
 </form>
 
