--- a/templates/administrador.html
+++ b/templates/administrador.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <nav id="nav">
+
+    <nav class="nav">
         <ul>
             <li><a href="/medico">medico</a></li>
         </ul>
