--- a/templates/f_Remision.html
+++ b/templates/f_Remision.html
@@ -1,5 +1,10 @@
 <link rel="Stylesheet" href="/static/css/Style.css">
 <from action="/remision"> 
+    <div id="cuerpo">
+        <header id="encabezado">
+            <h1>CLINICA COLOMBIA<H1>
+        <header>
+        </div>
     <div id="remision">
     <table>
         <h3>Remision<h3> 
