--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block body %}
+<div id="cuerpo">
+    <header id="encabezado">
+        <h1>CLINICA COLOMBIA<H1>
+    <header>
+    </div>
 <form action="/login" method="POST">
     <div id="inicio">
     <table>
