--- a/templates/encabezado.html
+++ b/templates/encabezado.html
@@ -4,12 +4,9 @@
 {% block encabezado%}
 <div id="cuerpo">
 <header id="encabezado">
-    <button data-mod-target="#mod" id="usuario" class=""
+    <button data-mod-target="#mod" id="usuario" class="btn" type="button" name="iniciar"> Iniciar sesion</button>
     <h1>CLINICA COLOMBIA<H1>
 <header>
-    
-
-
 {% endblock %}
 
 
