--- a/templates/f_medico.html
+++ b/templates/f_medico.html
@@ -7,7 +7,7 @@
     <header>
     </div>
 
-<form action ="/ingrear_medico", method="POST">
+<form action ="/ingresar_medico", method="POST">
     <div id="medico">
     <table>
         <h3 id="titulo">Medico<h3>
