--- a/templates/f_paciente.html
+++ b/templates/f_paciente.html
@@ -5,7 +5,7 @@
     <header>
     </div>
 
-<form action ="/paciente" method="POST">
+<form action ="/ingresar_paciente" method="POST">
 
     <div id="paciente">
     <table>
