--- a/templates/f_Remision.html
+++ b/templates/f_Remision.html
@@ -44,8 +44,8 @@
         <tr>
             <td colpas="2">
                 <input type="submit"  class="btn3" name="ingresar"value="ingresar">
-                <input type="submit"  class="btn3" name="actualizar"value="actualizar">
-                <input type="submit"  class="btn3" name="eliminar"value="eliminar">
+                <input type="button"  class="btn3" name="actualizar"value="actualizar">
+                <input type="button"  class="btn3" name="eliminar"value="eliminar">
             </td>
         </tr>
     </table>
