--- a/templates/f_consulta.html
+++ b/templates/f_consulta.html
@@ -82,8 +82,8 @@
         <tr>
             <td colspan="2">
                 <input id="boton" type="submit"  class="btn2" name="ingresar"value="ingresar">
-                <input id="boton" type="submit"  class="btn2" name="actualizar"value="actualizar">
-                <input id="boton" type="submit"  class="btn2" name="eliminar"value="eliminar">
+                <input id="boton" type="button"  class="btn2" name="actualizar"value="actualizar">
+                <input id="boton" type="button"  class="btn2" name="eliminar"value="eliminar">
             </td>
         </tr>
 
