--- a/templates/f_medico.html
+++ b/templates/f_medico.html
@@ -1,19 +1,11 @@
 
-
-<link rel="Stylesheet" href="/static/css/Style.css"> 
-<div id="cuerpo">
-    <header id="encabezado">
-        <h1>CLINICA COLOMBIA<H1>
-    <header>
-    </div>
-
 <form action ="/ingresar_medico", method="POST">
     <div id="medico">
     <table>
         <h3 id="titulo">Medico<h3>
         <tr>
             <td>
-                <label for="id">identificacion:</label>
+                <label for="id">Identificacion:</label>
             </td>
             <td>
                 <input type="text" name="id_med" id="idMed" required>
@@ -45,7 +37,7 @@
         </tr>
         <tr>
             <td>
-                <label for="email">correo:</label>
+                <label for="email">Correo:</label>
             </td>
             <td>
                 <input type="text" name="ema_med" id="emlMed" required> 
@@ -56,28 +48,44 @@
                 <label for="especialidad">Especialidad</label>
             </td>
             <td>
-                <select name="esp_med" id="espe_med">
+            <select name="esp_med" id="espe_med">
                     <option value="1">Cirujano</option>
                     <option value="2">Ortopedista</option>
                 </select>
             </td>
         </tr>
-            <tr>
-                <td>
-                    <label for="direccion">direccion</label>
-                </td>
-                <td>
-                    <input type="text" name="dir_med" id="dirMed" required>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <input type="submit"  class="btn2" name="ingresar"value="ingresar">
-                    <input type="submit"  class="btn2" name="actualizar"value="actualizar">
-                    <input type="submit"  class="btn2" name="eliminar"value="eliminar">
-                </td>
-            </tr>
+        <tr>
+            <td>
+                <label for="direccion">Direccion</label>
+            </td>
+            <td>
+                <input type="text" name="dir_med" id="dirMed" required>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="usu2">Usuario</label>
+            </td>
+            <td>
+                <input type="text" name="us_med" id="us_med">
+            </td>
+        </tr>    
+        <tr>
+            <td>
+                <label for="pas_med">Contraseña</label>
+            </td>
+            <td>
+                <input type="password" name="pas_med" id="pas_Med">
+            </td>
+        </tr>
 
+        <tr>
+            <td colspan="2">
+                <input type="submit"  class="btn2" name="ingresar"value="ingresar">
+                <input type="button"  class="btn2" name="actualizar"value="actualizar">
+                <input type="button"  class="btn2" name="eliminar"value="eliminar">
+            </td>
+        </tr>
     </table>
 </form>
 
