--- a/templates/f_laboratorio.html
+++ b/templates/f_laboratorio.html
@@ -35,6 +35,8 @@
         <tr>
             <td colspan="2">
                 <input id="boton" type="submit" class="btn2" name="ingresar"value="ingresar">
+                <input id="boton" type="button"  class="btn2" name="actualizar"value="actualizar">
+                <input id="boton" type="button"  class="btn2" name="eliminar"value="eliminar">
             </td>
         </tr>
     </table>
