--- a/templates/encabezado.html
+++ b/templates/encabezado.html
@@ -1,6 +1,4 @@
-<link rel="Stylesheet" href="/static/css/Style.css">
-{% extends "base.html" %}
-
+{% include "base.html" %}
 {% block encabezado%}
 <div id="cuerpo">
 <header id="encabezado">
