--- a/templates/encabezado.html
+++ b/templates/encabezado.html
@@ -1,8 +1,7 @@
-{% include "base.html" %}
-{% block encabezado%}
-<div id="cuerpo">
-<header id="encabezado">
-    <button data-mod-target="#mod" id="usuario" class="btn" type="button" name="iniciar"> Iniciar sesion</button>
+{% extends 'f_consulta.html' %}
+{% block encabezado %}
+<header id="cuerpo">
+    <button data-mod-target="#mod" id="usuario" class="btn" type="button" name="iniciar">Iniciar sesion</button>
     <h1>CLINICA COLOMBIA<H1>
 <header>
 {% endblock %}
